rename Sign in/out to Log in/out
This is the copy used in the prototype and design system, so we should
follow it.

--- a/manage_breast_screening/auth/jinja2/auth/sign_in.jinja
+++ b/manage_breast_screening/auth/jinja2/auth/sign_in.jinja
@@ -3,10 +3,10 @@
 {% block page_content %}
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
-    <h1 class="nhsuk-heading-l">Sign in</h1>
+    <h1 class="nhsuk-heading-l">Log in</h1>
 
     <a class="nhsuk-button nhsuk-button--secondary" href="{{ url('auth:cis2_sign_in') }}">
-      Sign in with CIS2
+      Log in with CIS2
     </a>
   </div>
 </div>
