--- a/manage_breast_screening/core/jinja2/layout-app.jinja
+++ b/manage_breast_screening/core/jinja2/layout-app.jinja
@@ -19,7 +19,7 @@
 
   {% do account_items.append({
       "href": url('auth:sign_out') if request and request.user.is_authenticated else url('auth:sign_in'),
-      "text": "Sign out" if request and request.user.is_authenticated else "Sign in",
+      "text": "Log out" if request and request.user.is_authenticated else "Log in",
   }) %}
 
   {{ header({
