rename sign_in / sign_out to login/logout in urls/code
The UI now says Log in/Log out so the code and urls should be somewhat consistant with that.

--- a/manage_breast_screening/auth/jinja2/auth/login.jinja
+++ b/manage_breast_screening/auth/jinja2/auth/login.jinja
@@ -5,7 +5,7 @@
   <div class="nhsuk-grid-column-two-thirds">
     <h1 class="nhsuk-heading-l">Log in</h1>
 
-    <a class="nhsuk-button nhsuk-button--secondary" href="{{ url('auth:cis2_sign_in') }}">
+    <a class="nhsuk-button nhsuk-button--secondary" href="{{ url('auth:cis2_login') }}">
       Log in with CIS2
     </a>
   </div>
