--- a/manage_breast_screening/core/jinja2/layout-app.jinja
+++ b/manage_breast_screening/core/jinja2/layout-app.jinja
@@ -6,28 +6,15 @@
   <link rel="stylesheet" href="{{ static('css/main.css' )}}">
 {% endblock %}
 
-{% block pageTitle %}{% if form and form.errors %}Error: {% endif %}{% if page_title %}{{page_title}} – {% endif %}Manage breast screening – NHS{% endblock %}
+{% block pageTitle %}{% if form and form.errors %}Error: {% endif %}{% if page_title %}{{ page_title }} – {% endif %}Manage breast screening – NHS{% endblock %}
 
 {% block header %}
-  {% set account_items = [] %}
-  {% if request.user.is_authenticated %}
-    {% do account_items.append({
-      "text": request.user.first_name ~ ' ' ~ request.user.last_name,
-      "icon": true
-    }) %}
-  {% endif %}
-
-  {% do account_items.append({
-      "href": url('auth:logout') if request and request.user.is_authenticated else url('auth:login'),
-      "text": "Log out" if request and request.user.is_authenticated else "Log in",
-  }) %}
-
   {{ header({
     "service": {
       "name": "Manage breast screening"
     },
     "account": {
-      "items": account_items
+      "items": header_account_items(request.user)
     },
     "navigation": {
       "items": [
