--- a/manage_breast_screening/assets/sass/components/_special-appointment-banner.scss
+++ b/manage_breast_screening/assets/sass/components/_special-appointment-banner.scss
@@ -1,3 +1,5 @@
+@use "../vendor/nhsuk-frontend/base" as *;
+
 .app-special-appointment-banner__action {
   text-align: right;
   @include nhsuk-font-size(19);
