--- a/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
@@ -5,26 +5,23 @@
 
 {% block step_content %}
 
-{% set symptoms_card_html %}
-    {% set has_symptoms = false %}
-
-    {% set inset_html %}
-    <p>No symptoms have been recorded for this participant.</p>
-    {% endset %}
-    {{ insetText({
-      "html": inset_html,
-      "classes": "nhsuk-u-margin-top-3 nhsuk-u-margin-bottom-4"
-    }) }}
-
-    <p class="nhsuk-u-margin-top-4 nhsuk-u-margin-bottom-0">
-      <a href="#" class="nhsuk-link">{{ "Add another symptom" if has_symptoms else "Add a symptom" }}</a>
-    </p>
-{% endset %}
-{{ card({
-  "heading": "Recent breast changes or symptoms",
+{% call card({
+  "heading": "Symptoms",
   "headingLevel": "2",
-  "descriptionHtml": symptoms_card_html
-}) }}
+}) %}
+  <p>Any problems or symptoms, including lumps, swelling, rashes or nipple changes</p>
+  {% if presenter.symptom_rows %}
+    {{ summaryList({
+      "rows": presenter.symptom_rows
+    }) }}
+  {% else %}
+    <p>No symptoms have been recorded for this participant.</p>
+  {% endif %}
+
+  <p class="nhsuk-u-margin-top-4 nhsuk-u-margin-bottom-0">
+    <a href="#" class="nhsuk-link">{{ "Add another symptom" if presenter.symptom_rows else "Add a symptom" }}</a>
+  </p>
+{% endcall %}
 
 {% set medical_history_card_html %}
   {% set breast_cancer_history_link %}
