--- a/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
@@ -15,7 +15,13 @@
         "rows": presenter.symptom_rows
       }) }}
   {% else %}
-    <p>No symptoms have been recorded for this participant.</p>
+    {% set insetHtml %}
+      <p>No symptoms have been recorded for this participant.</p>
+    {% endset %}
+    {{ insetText({
+      "html": insetHtml,
+      "classes": "nhsuk-u-margin-top-3 nhsuk-u-margin-bottom-4 app-inset-text"
+    }) }}
   {% endif %}
 
   <p class="nhsuk-u-margin-top-4 nhsuk-u-margin-bottom-0">
@@ -85,7 +91,7 @@
     {% endset %}
     {{ insetText({
       "html": insetHtml,
-      "classes": "nhsuk-u-margin-top-3 nhsuk-u-margin-bottom-4"
+      "classes": "nhsuk-u-margin-top-3 nhsuk-u-margin-bottom-4 app-inset-text"
     }) }}
 
     <p class="nhsuk-u-margin-top-4 nhsuk-u-margin-bottom-0">
