check `use_fieldset` arg in field templates
Out of the box, django defines per field whether a fieldset should be
used. In our case, we want it to be optional to allow for more
complex form structures where we combine multiple fields into
a single fieldset (so they are displayed under the same legend).

To control this behaviour, introduce some extra widget subclasses that
toggle off the flag.

--- a/manage_breast_screening/nhsuk_forms/jinja2/forms/day-month-year-date-input.jinja
+++ b/manage_breast_screening/nhsuk_forms/jinja2/forms/day-month-year-date-input.jinja
@@ -12,7 +12,7 @@
       "classes": unbound_field.label_classes if unbound_field.label_classes,
       "isPageHeading": false
     }
-  } if field.label,
+  } if field.use_fieldset else none,
   "errorMessage": error_message,
   "hint": {
     "html": hint|e
