--- a/manage_breast_screening/nhsuk_forms/jinja2/forms/checkboxes.jinja
+++ b/manage_breast_screening/nhsuk_forms/jinja2/forms/checkboxes.jinja
@@ -28,7 +28,7 @@
       "text": field.label,
       "classes": unbound_field.label_classes
     }
-  } if field.label,
+  } if field.use_fieldset else none,
   "errorMessage": error_message,
   "hint": {
     "html": unbound_field.hint|e
