fix: don't generate empty error messages for fields without errors

--- a/manage_breast_screening/nhsuk_forms/jinja2/django_form_helpers.jinja
+++ b/manage_breast_screening/nhsuk_forms/jinja2/django_form_helpers.jinja
@@ -5,7 +5,9 @@
       {% set ns = namespace(errors=[]) %}
 
       {% for field in form %}
-        {% set ns.errors = ns.errors + [{"text": field.errors[0], "href": "#" ~ field.auto_id}] %}
+        {% if field.errors %}
+          {% set ns.errors = ns.errors + [{"text": field.errors[0], "href": "#" ~ field.auto_id}] %}
+        {% endif %}
       {% endfor %}
       {% for error_list in form.non_field_errors() %}
         {% set ns.errors = ns.errors + [{"text": ",".join(error_list)}] %}
