add functionality for deleting lumps
after adding a lump, you can click change, and then
there will be a link to delete at the bottom of the form.
This should show a confirmation page first as it's not
easily revertable. On the confirmation page is a button
that POSTs back to the same url. The view will delete
the object and create an audit record.

--- a/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/symptoms/simple_symptom.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/symptoms/simple_symptom.jinja
@@ -42,4 +42,12 @@
       "text": "Save symptom"
     }) }}
   </div>
+
+  {% if delete_link %}
+    <p class="nhsuk-u-margin-top-4">
+      <a href="{{ delete_link.href }}" class="{{ delete_link.class }}">
+        {{ delete_link.text }}
+      </a>
+    </p>
+  {% endif %}
 {% endblock %}
