fix missing "or" divider

--- a/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/symptoms/simple_symptom.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/symptoms/simple_symptom.jinja
@@ -3,7 +3,7 @@
 {% from "nhsuk/components/fieldset/macro.jinja" import fieldset %}
 
 {% block form %}
-  {% do form.area.add_divider_after("LEFT", "or") %}
+  {% do form.area.add_divider_after("LEFT_BREAST", "or") %}
   {% do form.area.add_conditional_html(
     'OTHER',
     form.area_description.as_field_group()
