ensure we can pass classes to all choice fields

--- a/manage_breast_screening/nhsuk_forms/jinja2/forms/checkboxes.jinja
+++ b/manage_breast_screening/nhsuk_forms/jinja2/forms/checkboxes.jinja
@@ -30,6 +30,7 @@
     }
   } if field.use_fieldset else none,
   "errorMessage": error_message,
+  "classes": unbound_field.classes if unbound_field.classes,
   "hint": {
     "html": unbound_field.hint|e
   } if unbound_field.hint,
