--- a/manage_breast_screening/nhsuk_forms/jinja2/forms/single-checkbox.jinja
+++ b/manage_breast_screening/nhsuk_forms/jinja2/forms/single-checkbox.jinja
@@ -9,6 +9,7 @@
   "name": field.html_name,
   "idPrefix": field.auto_id,
   "errorMessage": error_message,
+  "classes": unbound_field.classes if unbound_field.classes,
   "hint": {
     "html": unbound_field.hint|e
   } if unbound_field.hint,
