add inline checkbox styles from prototype
We are using the inline variant to follow clinical best practice
in presenting right/left from the perspective of the clinician
facing the participant.

--- a/manage_breast_screening/assets/sass/main.scss
+++ b/manage_breast_screening/assets/sass/main.scss
@@ -48,3 +48,15 @@ a[href="#"] {
 .app-link--warning {
   color: $nhsuk-error-colour;
 }
+
+.app-checkboxes--inline {
+  @include nhsuk-media-query($from: tablet) {
+    @include nhsuk-clearfix;
+
+    .nhsuk-checkboxes__item {
+      clear: none;
+      float: left;
+      margin-right: nhsuk-spacing(4);
+    }
+  }
+}
