--- a/manage_breast_screening/clinics/jinja2/clinics/select_provider.jinja
+++ b/manage_breast_screening/clinics/jinja2/clinics/select_provider.jinja
@@ -7,7 +7,7 @@
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
     {% if providers|length == 0 %}
-      <p>You haven't been assigned to any providers.</p>
+      <p>No providers found. Check that you've been assigned a role with at least one provider.</p>
     {% else %}
       <form method="post">
         {{ csrf_input }}
