wire up "other symptom" forms

--- a/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
@@ -27,7 +27,8 @@
     <a href="{{ presenter.add_lump_link.href }}" class="nhsuk-link nhsuk-link--no-visited-state">{{ presenter.add_lump_link.text }}</a><br>
     <a href="{{ presenter.add_swelling_or_shape_change_link.href }}" class="nhsuk-link nhsuk-link--no-visited-state">{{ presenter.add_swelling_or_shape_change_link.text }}</a><br>
     <a href="{{ presenter.add_skin_change_link.href }}" class="nhsuk-link nhsuk-link--no-visited-state">{{ presenter.add_skin_change_link.text }}</a><br>
-    <a href="{{ presenter.add_nipple_change_link.href }}" class="nhsuk-link nhsuk-link--no-visited-state">{{ presenter.add_nipple_change_link.text }}</a>
+    <a href="{{ presenter.add_nipple_change_link.href }}" class="nhsuk-link nhsuk-link--no-visited-state">{{ presenter.add_nipple_change_link.text }}</a><br>
+    <a href="{{ presenter.add_other_symptom_link.href }}" class="nhsuk-link nhsuk-link--no-visited-state">{{ presenter.add_other_symptom_link.text }}</a>
   </p>
 {% endcall %}
 
