--- a/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/symptoms/forms/skin_change.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/symptoms/forms/skin_change.jinja
@@ -4,10 +4,9 @@
 
 {% block form %}
   {% do form.area.add_divider_after("LEFT", "or") %}
-  {% do form.area.add_conditional_html(
-    'OTHER',
-    form.area_description.as_field_group()
-  ) %}
+  {% do form.area.add_conditional_html('RIGHT_BREAST', form.area_description_right_breast.as_field_group()) %}
+  {% do form.area.add_conditional_html('LEFT_BREAST', form.area_description_left_breast.as_field_group()) %}
+  {% do form.area.add_conditional_html('OTHER', form.area_description_other.as_field_group()) %}
 
   {% do form.symptom_sub_type.add_conditional_html('SKIN_CHANGE_OTHER', form.symptom_sub_type_details.as_field_group()) %}
 
