add threshold param to character count component

--- a/manage_breast_screening/nhsuk_forms/jinja2/forms/character-count.jinja
+++ b/manage_breast_screening/nhsuk_forms/jinja2/forms/character-count.jinja
@@ -9,6 +9,7 @@
     "hint": {
       "text": unbound_field.hint
     } if unbound_field.hint,
+    "threshold": unbound_field.threshold if unbound_field.threshold,
     "maxlength": unbound_field.max_length,
     "maxwords": unbound_field.max_words,
     "id": field.auto_id,
