--- a/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/symptoms/forms/other.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/symptoms/forms/other.jinja
@@ -3,10 +3,7 @@
 {% from "nhsuk/components/fieldset/macro.jinja" import fieldset %}
 
 {% block form %}
-  {% do form.area.add_divider_after("LEFT_BREAST", "or") %}
-  {% do form.area.add_conditional_html('RIGHT_BREAST', form.area_description_right_breast.as_field_group()) %}
-  {% do form.area.add_conditional_html('LEFT_BREAST', form.area_description_left_breast.as_field_group()) %}
-  {% do form.area.add_conditional_html('OTHER', form.area_description_other.as_field_group()) %}
+  {% include "mammograms/medical_information/symptoms/forms/inline_area_radios.jinja" %}
 
   {% do form.when_started.add_divider_after("OVER_THREE_YEARS", "or") %}
   {% do form.when_started.add_divider_after("SINCE_A_SPECIFIC_DATE", "or") %}
@@ -18,8 +15,6 @@
   {% do form.recently_resolved.add_conditional_html('true', form.when_resolved.as_field_group()) %}
 
   {% do form.investigated.add_conditional_html('YES', form.investigation_details.as_field_group()) %}
-
-  {{ form.area.as_field_group() }}
 
   {{ form.symptom_sub_type_details.as_field_group() }}
 
