add notification banners to base layout
The message framework doesn't have a way to pass structured data,
but we can pass marked-safe HTML, as in this example from stack
overflow[1].

This is complicated by us using Jinja, which has it's own way of
marking strings safe, which is not recognised by the messages
framework. So when *adding* an HTML message, we need to mark it
with `mark_safe`, and when *rendering* the message we need to
use `Markup`.

Supporting html isn't essential, but it means we can show arbitrary
content in banners, including the success banner with header shown
in the design system example[2]

[1]: https://stackoverflow.com/questions/2053258/how-do-i-output-html-in-a-message-in-the-new-django-messages-framework
[2]: https://service-manual.nhs.uk/design-system/components/notification-banners

--- a/manage_breast_screening/core/jinja2/layout-app.jinja
+++ b/manage_breast_screening/core/jinja2/layout-app.jinja
@@ -1,4 +1,6 @@
 {% from 'nhsuk/components/header/macro.jinja' import header %}
+{% from "notification-banner/macro.jinja" import notificationBanner %}
+
 {% set assetPath = STATIC_URL ~ "/assets" %}
 {% extends "nhsuk/template.jinja" %}
 
@@ -34,13 +36,31 @@
 {% endblock %}
 
 {% block content %}
-  <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-two-thirds">
-      {% block messages %}
-        {#- TODO: show messages from django.contrib.messages -#}
-      {% endblock messages %}
-    </div>
-  </div>
+  {% block flash_messages %}
+    {#- TODO: show messages from django.contrib.messages -#}
+    {% set html %}
+      <h3 class="nhsuk-notification-banner__heading">
+        Patient record updated
+      </h3>
+      <p>Contact <a class="nhsuk-notification-banner__link" href="#">example@department.nhs.uk</a> if you think there's a problem.</p>
+    {% endset %}
+
+    {% set info_notification = info_banner(request) %}
+    {% set success_notification = success_banner(request) %}
+
+    {# Don't show a notification banner and an error summary component on the same page.
+       We'll just show the error summary (in layout-form.jinja). #}
+    {% if not form.errors %}
+      {% if success_notification %}
+        {{ notificationBanner(success_notification) }}
+      {% endif %}
+
+      {% if info_notification %}
+        {{ notificationBanner(info_notification) }}
+      {% endif %}
+    {% endif %}
+
+  {% endblock flash_messages %}
 
   {% block page_content %}
   {% endblock page_content %}
