--- a/manage_breast_screening/core/jinja2/wizard_step.jinja
+++ b/manage_breast_screening/core/jinja2/wizard_step.jinja
@@ -11,11 +11,12 @@
 }) }}
 {% endblock beforeContent %}
 
-{% block messages %}
-  {{ form_error_summary(form) }}
-{% endblock %}
-
 {% block page_content %}
+<div class="nhsuk-grid-row">
+  <div class="nhsuk-grid-column-two-thirds">
+    {{ form_error_summary(form) }}
+  </div>
+</div>
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-full">
 
