use content block from base template
this ensures notifications will be shown

--- a/manage_breast_screening/clinics/jinja2/clinics/index.jinja
+++ b/manage_breast_screening/clinics/jinja2/clinics/index.jinja
@@ -4,7 +4,7 @@
 {% from 'components/count/macro.jinja' import appCount %}
 {% from 'components/secondary-navigation/macro.jinja' import app_secondary_navigation %}
 
-{% block content %}
+{% block page_content %}
 <h1>{{ presenter.heading }}</h1>
 
 {% set ns = namespace() %}
