--- a/manage_breast_screening/clinics/jinja2/clinics/select_provider.jinja
+++ b/manage_breast_screening/clinics/jinja2/clinics/select_provider.jinja
@@ -3,7 +3,7 @@
 {% from 'nhsuk/components/button/macro.jinja' import button %}
 {% from 'nhsuk/components/radios/macro.jinja' import radios %}
 
-{% block content %}
+{% block page_content %}
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
     {% if providers|length == 0 %}
