--- a/manage_breast_screening/core/jinja2/layout-app.jinja
+++ b/manage_breast_screening/core/jinja2/layout-app.jinja
@@ -37,16 +37,20 @@
 
 {% block content %}
   {% block flash_messages %}
-    {#- TODO: show messages from django.contrib.messages -#}
-    {% set html %}
-      <h3 class="nhsuk-notification-banner__heading">
-        Patient record updated
-      </h3>
-      <p>Contact <a class="nhsuk-notification-banner__link" href="#">example@department.nhs.uk</a> if you think there's a problem.</p>
-    {% endset %}
+    {% set info_notification_params = get_notification_banner_params(
+        request, message_type='info',
+        disable_auto_focus=disable_auto_focus|default(true)
+      ) %}
 
-    {% set info_notification_params = info_banner(request, disable_auto_focus=disable_auto_focus|default(true)) %}
-    {% set success_notification_params = success_banner(request, disable_auto_focus=disable_auto_focus|default(true)) %}
+    {% set success_notification_params = get_notification_banner_params(
+        request, message_type='success',
+        disable_auto_focus=disable_auto_focus|default(true)
+      ) %}
+
+    {% set warning_notification_params = get_notification_banner_params(
+        request, message_type='warning',
+        disable_auto_focus=disable_auto_focus|default(true)
+      ) %}
 
     {# Don't show a notification banner and an error summary component on the same page.
        We'll just show the error summary (in layout-form.jinja). #}
@@ -57,6 +61,10 @@
 
       {% if info_notification_params %}
         {{ notificationBanner(info_notification_params) }}
+      {% endif %}
+
+      {% if warning_notification_params %}
+        {{ notificationBanner(warning_notification_params) }}
       {% endif %}
     {% endif %}
 
