--- a/manage_breast_screening/clinics/jinja2/clinics/show.jinja
+++ b/manage_breast_screening/clinics/jinja2/clinics/show.jinja
@@ -45,10 +45,8 @@
   {% set table_rows = [] %}
   {% for presented_appointment in presented_appointment_list.appointments %}
     {% set details_html %}
-      <p class="nhsuk-u-margin-bottom-1">
-        <a href="{{ url('mammograms:show_appointment', kwargs={"pk": presented_appointment.pk}) }}" class="nhsuk-link">
-          {{ presented_appointment.participant.full_name }}
-        </a>
+      <p class="nhsuk-u-margin-bottom-1 nhsuk-u-font-weight-bold">
+        {{ presented_appointment.participant.full_name }}
       </p>
       <p class="nhsuk-u-secondary-text-color nhsuk-u-margin-bottom-0">
         NHS:  {{ presented_appointment.participant.nhs_number }}
@@ -65,6 +63,28 @@
         {{ tag(presented_appointment.special_appointment_tag_properties) }}
       {% endif %}
     {% endset %}
+    {% set appointment_html %}
+      {{
+        appointment_status(
+          appointment=presented_appointment,
+          check_in_url=url(
+            'clinics:check_in',
+             kwargs={
+              'pk': presented_clinic.pk,
+              'appointment_pk': presented_appointment.pk,
+              }
+          ),
+          csrf_input=csrf_input
+        )
+      }}
+      <p class="nhsuk-u-margin-top-2 nhsuk-u-margin-bottom-0 app-nowrap">
+        <a href="{{ url('mammograms:show_appointment', kwargs={"pk": presented_appointment.pk}) }}" class="nhsuk-link">
+          View appointment
+        </a>
+      </p>
+    {% endset %}
+    {% set actions_html %}
+    {% endset %}
 
     {% do table_rows.append([
       {
@@ -77,17 +97,10 @@
         "html": date_of_birth_html
       },
       {
-        "html": appointment_status(
-          appointment=presented_appointment,
-          check_in_url=url(
-            'clinics:check_in',
-             kwargs={
-              'pk': presented_clinic.pk,
-              'appointment_pk': presented_appointment.pk,
-              }
-          ),
-          csrf_input=csrf_input
-        )
+        "html": appointment_html
+      },
+      {
+        "html": actions_html
       }
     ]) %}
   {% endfor %}
@@ -95,7 +108,7 @@
   {{ table({
     "head": [
       {
-        "text": "Start time"
+        "text": "Start"
       },
       {
         "text": "Details"
@@ -104,7 +117,10 @@
         "text": "Date of birth"
       },
       {
-        "text": "Appointment status"
+        "text": "Appointment"
+      },
+      {
+        "text": "Actions"
       }
     ],
     "rows": table_rows,
