Move check in link to actions column on clinic show page
- Update show template to render the link in the actions column.
- Extract a check-in component out of the existing appointment-status
  component.
- Update the existing check-in.js such that a container around the form
  remains its root element, but successful form submission looks for a
  corresponding data-event-status-container in the entire document (so
  the position of the status container on the page doesn't matter).
- Simplify method signature of the appointment-status macro
- Make the check-in macro raise an error if no check_in_url provided
  (rather than fall back to a default). This makes it easier to find
  bugs.
- Update appointment_details.jinja template, where we also have a status
  badge and check in link.

--- a/manage_breast_screening/clinics/jinja2/clinics/show.jinja
+++ b/manage_breast_screening/clinics/jinja2/clinics/show.jinja
@@ -6,6 +6,7 @@
 {% from 'components/count/macro.jinja' import appCount %}
 {% from 'components/secondary-navigation/macro.jinja' import app_secondary_navigation %}
 {% from 'components/appointment-status/macro.jinja' import appointment_status %}
+{% from 'components/check-in/macro.jinja' import check_in %}
 
 {% block beforeContent %}
 {{ backLink({
@@ -65,17 +66,7 @@
     {% endset %}
     {% set appointment_html %}
       {{
-        appointment_status(
-          appointment=presented_appointment,
-          check_in_url=url(
-            'clinics:check_in',
-             kwargs={
-              'pk': presented_clinic.pk,
-              'appointment_pk': presented_appointment.pk,
-              }
-          ),
-          csrf_input=csrf_input
-        )
+        appointment_status(presented_appointment)
       }}
       <p class="nhsuk-u-margin-top-2 nhsuk-u-margin-bottom-0 app-nowrap">
         <a href="{{ url('mammograms:show_appointment', kwargs={"pk": presented_appointment.pk}) }}" class="nhsuk-link">
@@ -84,6 +75,17 @@
       </p>
     {% endset %}
     {% set actions_html %}
+      {{ check_in(
+        presented_appointment,
+        check_in_url=url(
+          'clinics:check_in',
+           kwargs={
+            'pk': presented_clinic.pk,
+            'appointment_pk': presented_appointment.pk,
+            }
+        ),
+        csrf_input=csrf_input
+      ) }}
     {% endset %}
 
     {% do table_rows.append([
