--- a/manage_breast_screening/core/jinja2/components/appointment-header/macro.jinja
+++ b/manage_breast_screening/core/jinja2/components/appointment-header/macro.jinja
@@ -1,3 +1,3 @@
-{% macro appointment_header(appointment) %}
+{% macro appointment_header(user, appointment, csrf_input) %}
   {%- include 'components/appointment-header/template.jinja' -%}
 {% endmacro %}
