--- a/manage_breast_screening/core/jinja2/components/appointment-header/template.jinja
+++ b/manage_breast_screening/core/jinja2/components/appointment-header/template.jinja
@@ -1,3 +1,5 @@
+{% from 'nhsuk/components/button/macro.jinja' import button %}
+
 {% set clinic_slot = appointment.clinic_slot %}
 {% set participant = appointment.participant %}
 
@@ -10,3 +12,16 @@
 {% endif %}
 
 <p class="nhsuk-u-margin-bottom-4"><a href="{{ appointment.participant_url }}">View participant record</a></p>
+
+{% if appointment.can_be_started_by(user) %}
+  <form action="{{ url('mammograms:start_appointment', kwargs={'pk': appointment.pk}) }}" method="post">
+    <div class="nhsuk-grid-row">
+      <div class="nhsuk-grid-column-two-thirds">
+        {{ csrf_input }}
+        {{ button({
+          "text": "Start this appointment",
+        }) }}
+      </div>
+    </div>
+  </form>
+{% endif %}
