--- a/manage_breast_screening/mammograms/jinja2/mammograms/start_screening.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/start_screening.jinja
@@ -26,7 +26,7 @@
 {% endblock %}
 
 {% block step_content %}
-  {{ appointment_header(presented_appointment) }}
+  {{ appointment_header(request.user, presented_appointment, csrf_input=csrf_input) }}
 
   {{ special_appointment_banner(presented_appointment.special_appointment, show_change_link=True) }}
 
