Fix system test for clinic show page
- Fix an accessibility issue by distinguishing various View appointment
  links
- Make a step definition more specific about how it's locating a
  specific View appointment link on the page

--- a/manage_breast_screening/clinics/jinja2/clinics/show.jinja
+++ b/manage_breast_screening/clinics/jinja2/clinics/show.jinja
@@ -70,7 +70,7 @@
       }}
       <p class="nhsuk-u-margin-top-2 nhsuk-u-margin-bottom-0 app-nowrap">
         <a href="{{ url('mammograms:show_appointment', kwargs={"pk": presented_appointment.pk}) }}" class="nhsuk-link">
-          View appointment
+          View appointment <span class="nhsuk-u-visually-hidden"> for {{ presented_appointment.participant.full_name }}</span>
         </a>
       </p>
     {% endset %}
