remove start-screening template
We used to have two templates for appointments:
- one shown if the user is lacking clinical permissions or the
  appointment is completed
- one shown to clinical users when performing the appointment

Since we have moved away from a linear step-by-step flow, these
two templates have converged and we can get rid of one of them.

--- a/manage_breast_screening/mammograms/jinja2/mammograms/show/appointment_details.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/show/appointment_details.jinja
@@ -31,13 +31,13 @@
       {{ appointment_status(
         appointment=presented_appointment,
         csrf_input=csrf_input
-      )}}
+      ) }}
     </div>
   </div>
 
   {{ appointment_header(request.user, presented_appointment, csrf_input=csrf_input) }}
 
-  {{ special_appointment_banner(presented_appointment.special_appointment, show_change_link=False) }}
+  {{ special_appointment_banner(presented_appointment.special_appointment, show_change_link=presented_appointment.active) }}
 
   {{ app_secondary_navigation({
     "visuallyHiddenTitle": "Secondary menu",
