--- a/manage_breast_screening/participants/jinja2/participants/add_previous_mammogram.jinja
+++ b/manage_breast_screening/participants/jinja2/participants/add_previous_mammogram.jinja
@@ -1,4 +1,4 @@
-{% extends "layout-app.jinja" %}
+{% extends "layout-form.jinja" %}
 {% from "nhsuk/components/button/macro.jinja" import button %}
 {% from "nhsuk/components/back-link/macro.jinja" import backLink %}
 
