--- a/manage_breast_screening/core/jinja2/components/check-in/template.jinja
+++ b/manage_breast_screening/core/jinja2/components/check-in/template.jinja
@@ -7,7 +7,7 @@
   <div data-module="app-check-in" data-appointment-id="{{ presented_appointment.pk }}">
     <form action="{{ check_in_url }}" method="post" novalidate>
       <p class="nhsuk-u-margin-bottom-2">
-        <button class="app-button--link">Check in<span class="nhsuk-u-visually-hidden"> {{ presented_appointment.participant.full_name }}</span></button>
+        <button class="app-button app-button--link">Check in<span class="nhsuk-u-visually-hidden"> {{ presented_appointment.participant.full_name }}</span></button>
       </p>
       {{ csrf_input }}
     </form>
