Add app-u-nowrap utility class
- We currently use app-nowrap in various places in the codebase
- This isn't defined anywhere
- nhsuk-frontend has nhsuk-u-nowrap, but that currently only applies to
  mobile screens

In this commit:

- Add .app-u-nowrap
- Rename existing .app-nowrap -> .app-u-nowrap

--- a/manage_breast_screening/assets/sass/main.scss
+++ b/manage_breast_screening/assets/sass/main.scss
@@ -61,6 +61,10 @@ a[href="#"] {
   }
 }
 
+.app-u-nowrap {
+  white-space: nowrap;
+}
+
 /*
   The design system has an inline variant for radios, but it's overriden when conditionals are used,
   and it uses floats
