--- a/manage_breast_screening/core/jinja2/components/appointment-status/template.jinja
+++ b/manage_breast_screening/core/jinja2/components/appointment-status/template.jinja
@@ -10,6 +10,6 @@
     }) }}
   </span>
   {% if can_be_checked_in %}
-    <span data-show-on-check-in hidden>{{ tag({"text": "Checked in", "classes": "app-nowrap"}) }}</span>
+    <span data-show-on-check-in hidden>{{ tag({"text": "Checked in", "classes": "app-u-nowrap"}) }}</span>
   {% endif %}
 </div>
