--- a/manage_breast_screening/nhsuk_forms/jinja2/forms/month-year-date-input.jinja
+++ b/manage_breast_screening/nhsuk_forms/jinja2/forms/month-year-date-input.jinja
@@ -21,14 +21,14 @@
     {
       "name": field.subwidgets.0.data.name,
       "label": "Month",
-      "classes": "nhsuk-input--width-2",
+      "classes": 'nhsuk-input--width-2' + (' nhsuk-textarea--error' if field.errors else ''),
       "value": field.subwidgets.0.data.value,
       "id": field.auto_id
     },
     {
       "name": field.subwidgets.1.data.name,
       "label": "Year",
-      "classes": "nhsuk-input--width-4",
+      "classes": 'nhsuk-input--width-4' + (' nhsuk-textarea--error' if field.errors else ''),
       "value": field.subwidgets.1.data.value,
       "id": field.auto_id ~ "_1"
     }
